--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -49,7 +49,7 @@ Built specifically for the Hyperliquid ecosystem with optimized performance.
 
 | What | How Much |
 |------|----------|
-| Swap Fee | 0.3% (most pairs) |
+| Swap Fee | Dynamic (typically 0.05%) |
 | Points per dollar traded | 0.01 |
 | Points per dollar LP/day | 0.24 |
 | Min Gas Balance | ~0.1 HYPE |
