--- a/pages/liquidity/becoming-lp.mdx
+++ b/pages/liquidity/becoming-lp.mdx
@@ -14,7 +14,7 @@ As a liquidity provider (LP), you:
 ## Why Provide Liquidity?
 
 ### Earn Trading Fees
-- 0.05% - 1% of every swap
+- Dynamic fees from every swap
 - Proportional to your share
 - Compounds automatically
 
@@ -153,7 +153,7 @@ Check before confirming:
 Let's add $1,000 of liquidity:
 
 **Pool Selection**
-- Pool: WHYPE/USDE 0.3%
+- Pool: WHYPE/USDE
 - Current Price: 1 WHYPE = 50 USDE
 - 24h Volume: $500,000
 - TVL: $2,000,000
