--- a/pages/points-rewards/how-points-work.mdx
+++ b/pages/points-rewards/how-points-work.mdx
@@ -4,12 +4,18 @@ Learn how the points system works and how points convert to hx.finance tokens at
 
 ## Overview
 
-Points determine your share of hx.finance tokens at launch.
+HX Finance runs a dual points system to ensure transparency and flexibility:
 
-- **Earn by trading**
-- **Earn by providing liquidity**
-- **Multiply with tiers**
-- **Convert to hx.finance tokens at TGE**
+- **Standard Points**: Traditional database-tracked points for UI display
+- **HXP (On-chain Points)**: Blockchain-recorded points for transparency
+- **Both systems run in parallel** with identical earning rates
+- **Future trading potential** for HXP tokens
+
+### Why Two Systems?
+- **Redundancy**: Ensures points are never lost
+- **Transparency**: On-chain verification available
+- **Future Features**: HXP may become tradeable
+- **User Choice**: Both convert to hx.finance tokens at TGE
 
 ## Two Ways to Earn Points
 
@@ -97,11 +103,32 @@ $2,000 liquidity + $100 daily trades:
 - Day 20: Hit 10,000 points → Gold!
 - Daily after: 601 points/day (with 25% bonus)!
 
+## HXP: On-Chain Points System
+
+### What is HXP?
+HXP is our blockchain-based points token that mirrors your standard points balance:
+- **1 Standard Point = 1 HXP**
+- **Automatically minted** as you earn points
+- **Fully transparent** on the blockchain
+- **Non-transferable** (currently)
+
+### Future HXP Features
+- **Potential Trading**: HXP may become tradeable before TGE
+- **Price Discovery**: Market-based valuation of points
+- **Liquidity Options**: Early exit opportunities
+- **Governance Rights**: Possible voting power
+
+### Viewing Your HXP
+- Check balance in your wallet (token contract: `[HXP_ADDRESS]`)
+- View on Hyperliquid Explorer
+- Matches your standard points 1:1
+
 ## Points to Token Conversion
 
 At TGE (Token Generation Event):
 - 33% of total hx.finance token supply goes to point holders
 - Your share = (Your points ÷ Total points) × 33% supply
+- **Both standard points and HXP convert identically**
 
 **Example Math:**
 ```
@@ -148,6 +175,18 @@ A: Follow official announcements for updates.
 **Q: Can I start earning points at any time?**
 A: Yes, you can begin earning points immediately.
 
+**Q: What's the difference between standard points and HXP?**
+A: They're the same value (1:1 ratio) but HXP is recorded on-chain for transparency. Both convert equally at TGE.
+
+**Q: Will HXP become tradeable?**
+A: Possibly. This would allow early price discovery and liquidity, but no final decision has been made.
+
+**Q: Do I need to claim HXP separately?**
+A: No, HXP is automatically minted as you earn standard points. No additional actions required.
+
+**Q: If HXP becomes tradeable, can I sell before TGE?**
+A: If trading is enabled, yes. This would provide early liquidity options for point holders.
+
 ## Fair Usage & Anti-Abuse
 
 ### Our Commitment
@@ -174,11 +213,25 @@ The points calculation formula:
 
 Our priority is rewarding authentic participation. Users who engage naturally with the platform will always benefit most.
 
+## Dual System Benefits
+
+### For Users
+- **Double verification** of your points balance
+- **On-chain proof** of your contributions
+- **Future flexibility** if HXP becomes tradeable
+- **No extra steps** - both systems update automatically
+
+### Technical Details
+- Standard points: Fast UI updates, instant display
+- HXP tokens: Blockchain verified, slight delay for minting
+- Both systems synchronized regularly
+- Final TGE allocation based on snapshot of both systems
+
 ## Getting Started
 
-1. **Begin earning** - All amounts contribute to your total
+1. **Begin earning** - Both standard points and HXP accumulate automatically
 2. **Choose your approach** - Trading, liquidity provision, or both
-3. **Maintain activity** - Regular usage maximizes accumulation
+3. **Monitor both systems** - Check UI points and HXP balance
 4. **Join the community** - Discord for strategies and updates
 
 ---
