--- a/pages/private-trading/overview.mdx
+++ b/pages/private-trading/overview.mdx
@@ -29,7 +29,7 @@ Unlike mixers, private trading on hx.finance maintains regulatory compliance thr
 Uses SP1 zero-knowledge circuits to prove transaction validity without revealing details.
 
 ### 💱 Full AMM Integration
-Direct integration with Uniswap V3 pools provides the same liquidity and pricing as regular trades.
+Direct integration with liquidity pools provides the same liquidity and pricing as regular trades.
 
 ### 🏦 Multiple Token Support
 Currently supports:
