--- a/pages/private-trading/technical-details.mdx
+++ b/pages/private-trading/technical-details.mdx
@@ -34,7 +34,7 @@ graph TB
     end
     
     subgraph "AMM Layer"
-        R[Router V3]
+        R[Router]
         P[Liquidity Pools]
     end
     
@@ -376,7 +376,7 @@ Nullifiers prevent double-spending:
 
 ## Router Integration
 
-### Uniswap V3 Integration
+### AMM Integration
 
 **Router Address**: `0xEBd14cdF290185Cc4d0b5eC73A0e095d780e5D2f`
 
