--- a/pages/trading/how-to-swap.mdx
+++ b/pages/trading/how-to-swap.mdx
@@ -132,8 +132,8 @@ Input: 10 WHYPE
 Rate: 1 WHYPE = 50.25 USDE
 Output: 502.5 USDE
 Price Impact: 0.02%
-LP Fee: 1.51 USDE (0.3%)
-You Receive: 500.99 USDE
+LP Fee: 0.25 USDE (0.05%)
+You Receive: 502.25 USDE
 Points Earned: 5.01
 ```
 
@@ -143,8 +143,8 @@ Input: 1000 WHYPE
 Rate: 1 WHYPE = 50.15 USDE (slight impact)
 Output: 50,150 USDE
 Price Impact: 0.8%
-LP Fee: 150.45 USDE (0.3%)
-You Receive: 49,999.55 USDE
+LP Fee: 25.08 USDE (0.05%)
+You Receive: 50,124.92 USDE
 Points Earned: 500
 ```
 
@@ -154,8 +154,8 @@ Route: UETH → USDE → UBTC
 Input: 1 UETH
 Step 1: 1 UETH → 3,200 USDE
 Step 2: 3,200 USDE → 0.052 UBTC
-Total Fees: 0.6% (two hops)
-You Receive: 0.0517 UBTC
+Total Fees: 0.1% (two hops at 0.05% each)
+You Receive: 0.0519 UBTC
 ```
 
 ## Mobile Swapping
