more docs refelct fees better

--- a/pages/points-rewards/how-points-work.mdx
+++ b/pages/points-rewards/how-points-work.mdx
@@ -4,18 +4,12 @@ Learn how the points system works and how points convert to hx.finance tokens at
 
 ## Overview
 
-HX Finance runs a dual points system to ensure transparency and flexibility:
+HX Finance runs a dual points system:
 
 - **Standard Points**: Traditional database-tracked points for UI display
-- **HXP (On-chain Points)**: Blockchain-recorded points for transparency
+- **HXP (On-chain Points)**: Experimental blockchain-recorded points
 - **Both systems run in parallel** with identical earning rates
 - **Future trading potential** for HXP tokens
-
-### Why Two Systems?
-- **Redundancy**: Ensures points are never lost
-- **Transparency**: On-chain verification available
-- **Future Features**: HXP may become tradeable
-- **User Choice**: Both convert to hx.finance tokens at TGE
 
 ## Two Ways to Earn Points
 
