fix goldsky url

--- a/pages/technical/smart-contracts.mdx
+++ b/pages/technical/smart-contracts.mdx
@@ -103,7 +103,11 @@ await tx.wait();
 
 ### Subgraph Access
 
-**Endpoint**: `https://api.goldsky.com/api/public/project_cmay1j7dh90w601r2hjv26a5b/subgraphs/hx-time-weighted-points/v1.0.0/gn`
+**Main Analytics Endpoint**: `https://api.goldsky.com/api/public/project_cmay1j7dh90w601r2hjv26a5b/subgraphs/hx-analytics/v1.3.2/gn`
+
+**Additional Subgraphs**:
+- **Farming**: `https://api.goldsky.com/api/public/project_cmay1j7dh90w601r2hjv26a5b/subgraphs/algebra-farming/1.0.0/gn`
+- **Multisig**: `https://api.goldsky.com/api/public/project_cmay1j7dh90w601r2hjv26a5b/subgraphs/moonswap-multisig/1.8.0/gn`
 
 #### Example Queries
 
