--- a/pages/points-rewards/how-points-work.mdx
+++ b/pages/points-rewards/how-points-work.mdx
@@ -67,10 +67,10 @@ Your tier multiplies all your points. Higher tiers provide better multipliers.
 **Example Journey:**
 ```
 Day 1: Trade $100 → 1 point (Bronze)
-Day 5: Hit 1,000 points → Now Silver! 
-Day 6: Trade $100 → 1.1 points (10% bonus!)
-Week 3: Hit 10,000 points → Gold unlocked!
-Next trade: Trade $100 → 1.25 points (25% bonus!)
+Day 10: Hit 100 points → Now Silver! 
+Day 11: Trade $100 → 1.1 points (10% bonus!)
+Day 100: Hit 1,000 points → Gold unlocked!
+Next trade: Trade $100 → 1.2 points (20% bonus!)
 ```
 
 ## Example Strategies
