--- a/pages/points-rewards/how-points-work.mdx
+++ b/pages/points-rewards/how-points-work.mdx
@@ -38,24 +38,24 @@ $10,000 in pools = 2,400 points/day = 72,000 points/month
 Your tier multiplies all your points. Higher tiers provide better multipliers.
 
 ### Bronze: Newcomer
-- **Range**: 0-99 points
+- **Range**: 0-999 points
 - **Multiplier**: 1.0x
 
 ### Silver: Active Trader
-- **Range**: 100-999 points
+- **Range**: 1,000-9,999 points
 - **Multiplier**: 1.1x (+10%)
 
 ### Gold: Power User
-- **Range**: 1,000-9,999 points
-- **Multiplier**: 1.2x (+20%)
+- **Range**: 10,000-49,999 points
+- **Multiplier**: 1.25x (+25%)
 
 ### Platinum: DeFi Whale
-- **Range**: 10,000-99,999 points
-- **Multiplier**: 1.3x (+30%)
+- **Range**: 50,000-99,999 points
+- **Multiplier**: 1.5x (+50%)
 
 ### Diamond: Legend
 - **Range**: 100,000+ points
-- **Multiplier**: 1.5x (+50%)
+- **Multiplier**: 2.0x (+100%)
 
 ## How Tiers Work
 
@@ -67,10 +67,10 @@ Your tier multiplies all your points. Higher tiers provide better multipliers.
 **Example Journey:**
 ```
 Day 1: Trade $100 → 1 point (Bronze)
-Day 10: Hit 100 points → Now Silver! 
-Day 11: Trade $100 → 1.1 points (10% bonus!)
-Day 100: Hit 1,000 points → Gold unlocked!
-Next trade: Trade $100 → 1.2 points (20% bonus!)
+Day 5: Hit 1,000 points → Now Silver! 
+Day 6: Trade $100 → 1.1 points (10% bonus!)
+Week 3: Hit 10,000 points → Gold unlocked!
+Next trade: Trade $100 → 1.25 points (25% bonus!)
 ```
 
 ## Example Strategies
