--- a/pages/points-rewards/how-points-work.mdx
+++ b/pages/points-rewards/how-points-work.mdx
@@ -26,11 +26,14 @@ $10,000 swap = 100 points
 
 ### 2. Liquidity Points
 **Rate: 0.24 points per dollar per day**
+**Minimum Hold Time: 24 hours for full points**
 
 ```
 Examples:
 $1,000 in pools = 240 points/day = 7,200 points/month
 $10,000 in pools = 2,400 points/day = 72,000 points/month
+
+⚠️ Important: Removing liquidity does NOT earn points!
 ```
 
 ## Tier System
@@ -80,6 +83,7 @@ Add $5,000 liquidity on day 1:
 - Day 1: 1,200 points → Instant Silver tier!
 - Every day after: 1,320 points (with 10% bonus)
 - Week 1 total: 9,240 points → Almost Gold!
+- **Important**: Hold for at least 24 hours to avoid penalties!
 
 ### Steady Progress
 Trade $200 daily:
@@ -181,14 +185,41 @@ A: No, HXP is automatically minted as you earn standard points. No additional ac
 **Q: If HXP becomes tradeable, can I sell before TGE?**
 A: If trading is enabled, yes. This would provide early liquidity options for point holders.
 
+**Q: Do I get points for removing liquidity?**
+A: No, removing liquidity does not earn points. In fact, removing liquidity within 24 hours of adding it will result in penalties on the points you earned.
+
+**Q: What happens if I remove liquidity quickly?**
+A: You'll face SEVERE penalties based on how long you held the position:
+- Less than 1 hour: Lose 99% of earned points (keep only 1%)
+- 1-6 hours: Lose 95% of earned points (keep only 5%)
+- 6-12 hours: Lose 90% of earned points (keep only 10%)  
+- 12-24 hours: Lose 80% of earned points (keep only 20%)
+- 24+ hours: No penalty
+
+⚠️ **This means removing within 24 hours essentially forfeits your points!**
+
+**Q: Can I add and remove liquidity multiple times?**
+A: Yes, but you're limited to 3 add/remove cycles per pool every 24 hours to prevent gaming.
+
 ## Fair Usage & Anti-Abuse
 
 ### Our Commitment
 Points are designed to reward genuine platform usage. We actively monitor for and prevent manipulation to ensure fair distribution to real users who contribute to the ecosystem.
 
+### Liquidity Provision Rules
+- **No points for removing liquidity** - Only adding liquidity earns points
+- **Time-based penalties** - Removing liquidity within 24 hours incurs SEVERE penalties:
+  - < 1 hour: 99% penalty (you keep only 1% of points)
+  - 1-6 hours: 95% penalty (you keep only 5% of points)
+  - 6-12 hours: 90% penalty (you keep only 10% of points)
+  - 12-24 hours: 80% penalty (you keep only 20% of points)
+- **Rate limiting** - Maximum 3 add/remove cycles per pool per 24 hours
+- **Minimum hold period** - 24 hours to earn full points without penalties
+
 ### Prohibited Activities
 - **Sybil attacks** - Multiple accounts controlled by one entity
 - **Wash trading** - Artificial volume through self-trading
+- **Liquidity cycling** - Rapidly adding/removing liquidity to farm points
 - **Gaming the system** - Exploiting loopholes or unintended mechanics
 - **Bot manipulation** - Automated activity designed solely to farm points
 
