--- a/pages/liquidity/farming.mdx
+++ b/pages/liquidity/farming.mdx
@@ -16,10 +16,10 @@ Yield farming provides extra incentives for liquidity providers:
 
 | Pool | Rewards | APR | Points Multiplier | Requirements |
 |------|---------|-----|-------------------|--------------|
-| WHYPE/USDE | HX Points | Variable | 3x | Full range or concentrated |
-| USDE/UBTC | HX Points | Variable | 2.5x | Any range |
-| BUDDY/USDE | HX Points | Variable | 2x | Any range |
-| LHYPE/USDE | HX Points | Variable | 2x | Any range |
+| WHYPE/USDE | HX Points | Variable | 1x | Full range or concentrated |
+| USDE/UBTC | HX Points | Variable | 1x | Any range |
+| BUDDY/USDE | HX Points | Variable | 1x | Any range |
+| LHYPE/USDE | HX Points | Variable | 1x | Any range |
 
 ### Coming Soon
 - Partner token rewards
@@ -98,6 +98,7 @@ Your Rewards = (Your Liquidity / Total Liquidity) × Daily Rewards × Time
 ### With Multipliers
 ```
 Final Rewards = Base Rewards × Points Multiplier × Tier Multiplier
+(Note: All multipliers are currently 1x)
 ```
 
 ### Example Calculation
@@ -108,9 +109,9 @@ Your Share: 1%
 Daily Rewards: 10,000 points
 Base Earning: 100 points/day
 
-With 3x multiplier: 300 points/day
-With Diamond tier (2x): 600 points/day
-Monthly total: 18,000 points
+With 1x multiplier: 100 points/day
+With Diamond tier (1x): 100 points/day
+Monthly total: 3,000 points
 ```
 
 ## Risk Management
@@ -171,7 +172,7 @@ Monthly total: 18,000 points
 
 ### Launch Farming
 New token launches often include:
-- 10x-50x point multipliers
+- Higher base point rewards
 - Exclusive early access
 - Higher reward allocations
 - Limited time bonuses
